@@ -7,6 +7,9 @@ version 2.7.4 (MM/DD/YYYY):
 	libpurple:
 	* Added ability to use TURN relaying via TCP and TLS (including preference
 	  settings for these).
+	* Fall back to an ordinary request if a UI does not support showing a
+	  request with an icon.  Fixes receiving MSN file transfer requests including
+	  a thumbnail in Finch.
 
 	Yahoo/Yahoo JAPAN:
 	* Stop doing unnecessary lookups of certain alias information.  This
